Passing of both local URL and handle URL to the XsltModel for CMDI visualisation, latter as a fallback Refs #31